@@ -1,0 +1,15 @@
+Western European: ÀÉÎè
+
+Chinese (Simplified): 丁万不㐀㐁丣並
+
+Extended Latin: ĀčŁœ
+
+Japanese Hiragana: あきぐけ゚ 
+
+Arabic: ؟تص
+
+Cyrillic: ЀЋЖ
+
+Greek: Άαξ
+
+Korean: 了丫乖 
